Funciones de Mysql

--- a/TODO_MYSQL/order_by.html
+++ b/TODO_MYSQL/order_by.html
@@ -12,7 +12,16 @@
     <img src="img/order_1.PNG" alt="">
 
     <ul>
-        <li>Ordena de manera desendente</li>
+        <li>Ordena de manera desendente por el DES</li>
+    </ul>
+    <hr>
+
+    <h1>Ordena los Elementos Order by con relación</h1>
+    <img src="img/order_2.PNG" alt="">
+
+    <ul>
+        <li>Ordena de manera desendente por el DES</li>
+        <li>Respetar el orden primero el Where despues el order by</li>
     </ul>
     <hr>
 
