Curso de Jquery

--- a/TODO_JQUERY/JQUERY_PRACTICAS/CREAR_HTML/practica.html
+++ b/TODO_JQUERY/JQUERY_PRACTICAS/CREAR_HTML/practica.html
@@ -9,6 +9,14 @@
     </head>
     <body>
 
+        
+    <button id="b3">Agregar caja html</button>
+
+    <div id="container">
+        <div id="c1">
+            hola
+        </div>
+    </div>
 
     
 
