--- a/TODO_VUE.JS/v-model/uno.html
+++ b/TODO_VUE.JS/v-model/uno.html
@@ -12,7 +12,9 @@
 
         <div id="app">
 
-            {{ saludo }}
+           <input type="text" v-model="nombre">
+
+           <h1>Tu nombre es: {{ nombre }}</h1>
 
         </div>
 
