--- a/TODO_VUE.JS/Enlace_datos_img/uno.html
+++ b/TODO_VUE.JS/Enlace_datos_img/uno.html
@@ -14,6 +14,11 @@
 
             {{ saludo }}
 
+            <img v-bind:src="src" alt="">
+            <hr>
+            <h1>Segunda manera solo con los dos puntos :src="src"</h1>
+            <img :src="src" alt="">
+
         </div>
 
 
