--- a/TODO_VUE.JS/interpolacion_metodos/uno.html
+++ b/TODO_VUE.JS/interpolacion_metodos/uno.html
@@ -14,6 +14,13 @@
 
             {{ saludo }}
 
+            <hr>
+
+            {{ mostrarMensaje() }}
+
+            <hr>
+            {{ mensajeDos() }}
+
         </div>
 
 
