--- a/TODO_LARAVEL/TIPS_GENERALES/tips.html
+++ b/TODO_LARAVEL/TIPS_GENERALES/tips.html
@@ -8,3 +8,13 @@ Agregar clase y campo enum
 </div>
 ##############################
 ------------------------------------------------------
+
+------------------------------------------------------
+Debugbar
+##############################
+https://github.com/barryvdh/laravel-debugbar
+
+composer require barryvdh/laravel-debugbar --dev
+##############################
+------------------------------------------------------
+
